--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,9 +118,9 @@ add_executable(FimicsC2020
 #        src/c/advance/linkedlist/LinkedListStatic.cpp
 #        src/c/advance/linkedlist/LinkedList2.c
 #        src/c/advance/linkedlist/LinkedListFun.c
-#        src/c/advance/fun/FunPointer.c
-#        src/c/advance/fun/FunPointerAsParams.c
-#        src/c/advance/fun/FunCallBack.c
+#        src/c/advance/fun2/FunPointer.c
+#        src/c/advance/fun2/FunPointerAsParams.c
+#        src/c/advance/fun2/FunCallBack.c
 #        src/cpp/basic1/XCout.cpp
 
 #        src/cpp/basic1/CoionsScope.cpp
@@ -129,4 +129,79 @@ add_executable(FimicsC2020
 #        src/cpp/basic1/StrengthenC.cpp
 #        src/cpp/basic1/const/test.c
 #        src/cpp/basic1/const/XConst.cpp
-        src/cpp/basic1/XRefcpp src/cpp/basic1/PassValue.cpp src/cpp/basic1/PointerRef.cpp src/cpp/basic1/ConstRef.cpp)
+#        src/cpp/basic1/XRefcpp
+#        src/cpp/basic1/PassValue.cpp
+#        src/cpp/basic1/PointerRef.cpp
+#        src/cpp/basic1/ConstRef.cpp
+#        src/cpp/fun2/XCircle.cpp
+#        src/cpp/fun2/XInlineFun.cpp
+#        src/cpp/fun2/DefaultPamars.cpp
+#        src/cpp/fun2/FunOverLoad.cpp
+#        src/cpp/fun2/test.c
+#        src/cpp/fun2/ExternC.cpp
+#        src/cpp/fun2/CWarp.c
+#        src/cpp/fun2/CppWarp.cpp
+#        src/cpp/fun2/MemberAttr.cpp
+#        src/cpp/genobj3/Cube.cpp
+#        src/cpp/genobj3/ConStructAndDeStruct.cpp
+#        src/cpp/genobj3/ConstructCategory.cpp
+#        src/cpp/genobj3/ConstructCopy.cpp
+#        src/cpp/genobj3/ConstructRegular.cpp
+#        src/cpp/genobj3/DeepCopy.cpp
+#        src/cpp/genobj3/InitList.cpp
+#        src/cpp/genobj3/ClassObjAsMember.cpp
+#        src/cpp/genobj3/XExplicit.cpp
+#        src/cpp/genobj3/NewDelete.cpp
+#        src/cpp/oop4/XSttic.cpp
+#        src/cpp/oop4/SingleTon1.cpp
+#        src/cpp/oop4/SingleTon2.cpp
+#        src/cpp/oop4/ClassObject.cpp
+#        src/cpp/oop4/XThis.cpp
+#        src/cpp/oop4/NullPointer.cpp
+#        src/cpp/oop4/ConstFunction.cpp
+#        src/cpp/oop4/FriendGlobalFunction.cpp
+#        src/cpp/oop4/FriendClass.cpp
+#        src/cpp/oop4/FriendMemberFunction.cpp
+#        src/cpp/operator5/XArray.cpp
+#        src/cpp/operator5/OperatorAdd.cpp
+#        src/cpp/operator5/OperatorLeftShit.cpp
+#        src/cpp/operator5/OperatorIncreat.cpp
+#        src/cpp/operator5/SmartPoint.cpp
+#        src/cpp/operator5/OperatorEq.cpp
+#        src/cpp/operator5/OperatorFun.cpp
+#        src/cpp/operator5/OperatorString.cpp
+#        src/cpp/extends6/Basic.cpp
+#        src/cpp/extends6/ExtendsCategory.cpp
+#        src/cpp/extends6/ExtendsModel.cpp
+#        src/cpp/extends6/ExtendsConstructor.cpp
+#        src/cpp/extends6/ExtendSameMebmer.cpp
+#        src/cpp/extends6/ExtendsSameStaticMember.cpp
+#        src/cpp/extends6/MutilExtends.cpp
+#        src/cpp/extends6/DiamondExtends.cpp
+#        src/cpp/virtualfun7/VirtualFun.cpp
+#        src/cpp/virtualfun7/Polym.cpp
+#        src/cpp/virtualfun7/AllVir.cpp
+#        src/cpp/template/FunctionTemplate.cpp
+#        src/cpp/template/CharIntSort.cpp
+#        src/cpp/template/FunctionTemplate1.cpp
+#        src/cpp/template/ClassTemplate1.cpp
+#        src/cpp/template/ClassTemplate2.cpp
+#        src/cpp/template/ClassTemplate3.cpp
+#        src/cpp/template/ClassTemplate4AsParms.cpp
+#        src/cpp/template/ClassTemplate5Extends.cpp
+#        src/cpp/template/ClassTemplate6.cpp
+#        src/cpp/template/ClassTemplate7Friend.cpp
+#        src/cpp/template/myArray.cpp
+#        src/cpp/template/myArray.h
+#        src/cpp/template/ClassTemplate8.cpp
+
+#        src/cpp/expection9/TypeCast.cpp
+#        src/cpp/expection9/Expection1.cpp
+#        src/cpp/expection9/ExceptionLifeCycle.cpp
+#        src/cpp/expection9/ExceptionPolym.cpp
+#        src/cpp/expection9/ExpectionStardand.cpp
+#        src/cpp/expection9/MyException.cpp
+#        src/cpp/expection9/StreamInput.cpp
+#        src/cpp/expection9/StreamOutput.cpp
+#        src/cpp/expection9/StreamFile.cpp
+        )
