--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
 project(FimicsC2020)
-project(FimicsQT)
 
 set(CMAKE_CXX_STANDARD 11)
-
 add_executable(FimicsC2020
 #        main.cpp
 #        src/c/flow/Hello.c
@@ -225,9 +223,7 @@ add_executable(FimicsC2020
 #        src/stl/Sort16.cpp
 #        src/stl/ReplaceAndCopy17.cpp
 #        src/stl/Numeric18.cpp
-        src/stl/Collections.cpp
-        )
+#        src/stl/Collections.cpp
+        qt/src/QtMain.cpp)
 
-add_executable(FimicsQT
-
-        )
+add_subdirectory(qt)
